--- a/prepage.css
+++ b/prepage.css
@@ -42,7 +42,21 @@ body {
 
 header { 
     padding: 1rem 0;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+}
+
+a{
+    text-decoration: none;
+    color: var(--color);
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+a:hover {
+    background: var(--accent);
+    color: var(--primary_bg);
+    transform: translateY(-2px);
 }
 
 header h2{
